<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".Ingresar_Datos_Usuario">

    <EditText
        android:id="@+id/txt_nom_ing_datos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:hint="@string/txt_nom_ing_datos"
        android:importantForAutofill="no"
        android:inputType="textPersonName|textCapWords"
        android:textColor="#D48900"
        android:textColorHighlight="#D48900"
        android:textColorHint="#D48900"
        android:textColorLink="#D48900"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_rut_ing_datos" />

    <EditText
        android:id="@+id/txt_ape_pat_ing_datos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:hint="@string/txt_ape_pat_ing_datos"
        android:importantForAutofill="no"
        android:inputType="textPersonName|textCapWords"
        android:textColor="#D48900"
        android:textColorHighlight="#D48900"
        android:textColorHint="#D48900"
        android:textColorLink="#D48900"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nom_ing_datos" />

    <EditText
        android:id="@+id/dtm_fec_nac_ing_datos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:hint="@string/dtm_fec_nac_ing_datos"
        android:importantForAutofill="no"
        android:inputType="date"
        android:onClick="ingresarFechaNacimiento"
        android:textColor="#D48900"
        android:textColorHighlight="#D48900"
        android:textColorHint="#D48900"
        android:textColorLink="#D48900"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_ape_mat_ing" />

    <Button
        android:id="@+id/btn_reg_ing_datos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/button_enviar_datos"
        android:text="@string/btn_reg_ing_datos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_pass_reing_datos" />

    <RadioGroup
        android:id="@+id/cont_gen_ing_datos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dtm_fec_nac_ing_datos">

        <RadioButton
            android:id="@+id/rdb_masc_ing_datos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/rdb_masc_ing_datos"
            android:textColor="#D48900"
            android:textColorHighlight="#D48900"
            android:textColorHint="#D48900"
            android:textColorLink="#D48900"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/rdb_fem_ing_datos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/rdb_fem_ing_datos"
            android:textColor="#D48900"
            android:textColorHighlight="#D48900"
            android:textColorHint="#D48900"
            android:textColorLink="#D48900"
            android:textSize="14sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/dtm_fec_ing_datos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:clickable="false"
        android:ems="10"
        android:hint="@string/dtm_fec_ing_datos"
        android:importantForAutofill="no"
        android:inputType="date"
        android:onClick="registrarFechaIngreso"
        android:textColor="#d48900"
        android:textColorHighlight="#D48900"
        android:textColorHint="#D48900"
        android:textColorLink="#D48900"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cont_gen_ing_datos" />

    <EditText
        android:id="@+id/txt_pass_ing_datos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:hint="@string/txt_pass_ing_datos"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="#D48900"
        android:textColorHighlight="#D48900"
        android:textColorHint="#D48900"
        android:textColorLink="#D48900"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dtm_fec_ing_datos" />

    <EditText
        android:id="@+id/txt_pass_reing_datos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:hint="@string/txt_pass_reing_datos"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="#d48900"
        android:textColorHighlight="#d48900"
        android:textColorHint="#d48900"
        android:textColorLink="#d48900"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_pass_ing_datos" />

    <EditText
        android:id="@+id/txt_rut_ing_datos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:hint="@string/txt_rut_ing_datos"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#d48900"
        android:textColorHighlight="#d48900"
        android:textColorHint="#d48900"
        android:textColorLink="#d48900"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_ape_mat_ing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:hint="@string/txt_ape_mat_ing_datos"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#d48900"
        android:textColorHighlight="#d48900"
        android:textColorHint="#d48900"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_ape_pat_ing_datos" />

</androidx.constraintlayout.widget.ConstraintLayout>